--- a/gradle.properties
+++ b/gradle.properties
@@ -11,5 +11,5 @@ halplibe_version=2.1.5
 
 # Mod
 mod_version=1.0.0
-mod_group=turniplabs
-mod_name=examplemod
+mod_group=lightglowstudios
+mod_name=bta-paradise
